scode/TeamDigital/prob8/error.txt
  File "/var/www/html/scode/TeamDigital/prob8/main.py", line 7
    for
       ^
SyntaxError: invalid syntax
